# crud-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
Material Teorico/Desafio_aula17/: desafio.py  meubanco.db  ref.md
Material Teorico/Testes/: testing_sqlalchemy.py  testing_sqlmodel.py
Material Teorico/aula_18/: exemplo_00.py
Material Teorico/aula_19/: database.py  fastapi.db  main.py  test_fastapi.py
Testes/: hero_database.db
