[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = ["mourayago <moura.yagoibmec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.21"
sqlalchemy = "^2.0.32"
sqlalchemy-orm = "^1.2.10"
requests = "^2.32.3"
pydantic = "^2.8.2"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
